--- a/cluster/addons/fluentd-gcp/fluentd-gcp-image/google-fluentd.conf
+++ b/cluster/addons/fluentd-gcp/fluentd-gcp-image/google-fluentd.conf
@@ -64,7 +64,16 @@
 <match reform.**>
   type record_reformer
   enable_ruby true
-  tag kubernetes.${tag_suffix[4].split('-')[0..-2].join('-')}
+  tag raw.kubernetes.${tag_suffix[4].split('-')[0..-2].join('-')}
+</match>
+
+<match raw.kubernetes.**>
+  type detect_exceptions
+  remove_tag_prefix raw
+  message log
+  multiline_flush_interval 5
+  max_bytes 50000
+  max_lines 500
 </match>
 
 # Example:
