--- a/cluster/addons/fluentd-gcp/fluentd-gcp-image/google-fluentd.conf
+++ b/cluster/addons/fluentd-gcp/fluentd-gcp-image/google-fluentd.conf
@@ -67,6 +67,7 @@
   tag raw.kubernetes.${tag_suffix[4].split('-')[0..-2].join('-')}
 </match>
 
+# Detect exceptions in the log output and forward them as one log entry.
 <match raw.kubernetes.**>
   type detect_exceptions
   remove_tag_prefix raw
