--- a/cluster/addons/fluentd-gcp/fluentd-gcp-image/google-fluentd-journal.conf
+++ b/cluster/addons/fluentd-gcp/fluentd-gcp-image/google-fluentd-journal.conf
@@ -72,8 +72,8 @@
   remove_tag_prefix raw
   message log
   multiline_flush_interval 5
-  max_bytes 50000
-  max_lines 500
+  max_bytes 1000000
+  max_lines 1000
 </match>
 
 # Example:
