--- a/cluster/addons/fluentd-gcp/fluentd-gcp-image/fluent.conf
+++ b/cluster/addons/fluentd-gcp/fluentd-gcp-image/fluent.conf
@@ -63,6 +63,7 @@
   type detect_exceptions
   remove_tag_prefix raw
   message log
+  stream stream
   multiline_flush_interval 5
   max_bytes 1000000
   max_lines 1000
