Change limit to 50k.

--- a/cluster/addons/fluentd-gcp/fluentd-gcp-image/fluent.conf
+++ b/cluster/addons/fluentd-gcp/fluentd-gcp-image/fluent.conf
@@ -65,7 +65,7 @@
   message log
   stream stream
   multiline_flush_interval 5
-  max_bytes 1000000
+  max_bytes 500000
   max_lines 1000
 </match>
 
